Basic structure and smash complete.

--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
 </head>
 <body>
 <h1>Odin Recipes</h1>
+<a href="recipes/kk_smash_burger.html">Krispy Kreme Smash Burger</a>
+<a href="recipes/dirty_martini.html">Dirty Martini</a>
+<a href="recipes/bacon.html">Bacon</a>
 </body>
 </html>
