Corrected image sourcing in each file and corrected errors in Smash.

--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Odin Recipes</title>
 </head>
 <body>
 <h1>Odin Recipes</h1>
-<a href="recipes/kk_smash_burger.html">Krispy Kreme Smash Burger</a>
-<a href="recipes/dirty_martini.html">Dirty Martini</a>
-<a href="recipes/bacon.html">Bacon</a>
+<p><a href="recipes/kk_smash_burger.html">Krispy Kreme Smash Burger</a></p>
+<p><a href="recipes/dirty_martini.html">Dirty Martini</a></p>
+<p><a href="recipes/bacon.html">Bacon</a></p>
 </body>
 </html>
