--- a/recipes/bacon.html
+++ b/recipes/bacon.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Bacon</h1>
-    <img src="./images/kk_smash_burger.jpg">
+    <img src="../images/bacon.jpg">
     <p><h2>Ingredients</h2></p>
         <ul>
             <li>4 Krispy Kreme Glazed Donuts</li>
