--- a/recipes/dirty_martini.html
+++ b/recipes/dirty_martini.html
@@ -6,10 +6,10 @@
 </head>
 <body>
     <h1>Dirty Martini</h1>
-    <img src="./images/kk_smash_burger.jpg">
+    <img src="../images/dirty_martini.jpg">
     <p><h2>Ingredients</h2></p>
         <ul>
-            <li>4 Krispy Kreme Glazed Donuts</li>
+            <li></li>
             <li></li>
         </ul>
     <p><h2>Steps</h2></p>
