--- a/recipes/kk_smash_burger.html
+++ b/recipes/kk_smash_burger.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Krispy Kreme Smash Burger</h1>
-    <img src="./images/kk_smash_burger.jpg">
+    <img src="../images/kk_burger.jpg" width="600">
     <p><h2>Ingredients</h2></p>
         <ul>
             <li><em><h3>Sauce</h3></em></li>
@@ -31,7 +31,7 @@
         </ul>
     <p><h2>Steps</h2></p>
     <p><strong>Notes:</strong>You can use 85&percnt; lean ground beef, but 90&percnt; lean will product a dry burger.
-    Having an assistant waving a towel near the smoke detector will be very helpful during the cooking step.  Pressing
+    Having an assistant waving a towel near the smoke detector will be very helpful during the cooking steps.  Pressing
     the patties strongly is required to generate the desired patty thinness and crust.  American cheese is recommended
     for correct meltiness.</p>
         <ol>
@@ -39,7 +39,7 @@
             <li>Spread &frac12; tablespoon sauce on cut side of top donut half</li>
             <li>Divide beef into 8 equal pieces (2 ounces each); form into loose, rough balls (do not compress).</li>
             <li>Place oil in 12-inch cast-iron skillet.  Use paper towel to rub oil into bottom of skillet (reserve towel).  Heat skillet over medium-low heat for 5 minutes.</li>
-            <li>Set oven to 200&deg; and place wire rack in baking tray in oven.</li>
+            <li>Set oven to 200&deg; and place wire rack in rimmed baking sheet in oven.</li>
             <li>While skillet heats, wrap bottom and sides of small saucepan with large sheet of aluminum foil and place large plate next to cooktop.</li>
             <li>Increase heat to high (and position assistant near smoke alarm).  When skillet begins to smoke, place 2 balls about 3 inches apart in skillet. </li>
             <li>Use bottom of prepared saucepan to firmly smash each ball until 4 to 4&frac12; inches in diameter.  Place saucepan on plate next to cooktop.</li>
@@ -49,8 +49,7 @@
             <li>Gently scrape any browned bits from skillet, use tongs to wipe with reserved paper towel.  Return to heat.</li>
             <li>Repeat with two more balls, then cover each with one slice cheese.</li>
             <li>Repeat and cover each slice with additional meat patty.</li>
-            <li>Assemble with donut bottom, burger stack, lettuce, tomato and cap with prepared top.  Serve immediately.</li>
-
+            <li>Assemble with donut bottom, lettuce, burger stack, tomato and cap with prepared top.  Serve immediately.</li>
         </ol>
 </body>
 </html>
