Completed Dirty Martin, added home href for each recipe.

--- a/recipes/dirty_martini.html
+++ b/recipes/dirty_martini.html
@@ -5,16 +5,24 @@
     <title>Dirty Martini</title>
 </head>
 <body>
-    <h1>Dirty Martini</h1>
-    <img src="../images/dirty_martini.jpg">
+    <h1>Dirty Martini for two</h1>
+    <img src="../images/dirty_martini.jpg" width="400">
     <p><h2>Ingredients</h2></p>
         <ul>
-            <li></li>
-            <li></li>
+            <li>6 colossal pimento stuffed Spanish Queen olives</li>
+            <li>3 shots room temperature vodka (Tito's Handmade)</li>
+            <li>1.5 shots vermouth (Dolin Dry)</li>
+            <li>1 shot olive brine</li>
+            <li>approximately 8 ice cubes</li>
         </ul>
     <p><h2>Steps</h2></p>
         <ol>
-
+            <li>Place 2 martini glasses and cocktail shaker in freezer, chill for 30 minutes</li>
+            <li>Skewer 3 olives per skewer, place in freezer in glasses</li>
+            <li>Combine remaining liquid ingredients in cocktail shaker, shake 3 times</li>
+            <li>Add ice, shake vigorously for 20 seconds</li>
+            <li>Pour into chilled glasses over olives, enjoy!</li>
         </ol>
+<a href="../index.html">Home</a>
 </body>
 </html>
