--- a/recipes/kk_smash_burger.html
+++ b/recipes/kk_smash_burger.html
@@ -51,5 +51,7 @@
             <li>Repeat and cover each slice with additional meat patty.</li>
             <li>Assemble with donut bottom, lettuce, burger stack, tomato and cap with prepared top.  Serve immediately.</li>
         </ol>
+
+<a href="../index.html">Home</a>
 </body>
 </html>
