Miscellaneous corrections and polish.  Complete.

--- a/recipes/bacon.html
+++ b/recipes/bacon.html
@@ -6,15 +6,31 @@
 </head>
 <body>
     <h1>Bacon</h1>
-    <img src="../images/bacon.jpg">
+    <img src="../images/bacon.jpg" width="400">
     <p><h2>Ingredients</h2></p>
         <ul>
-            <li>4 Krispy Kreme Glazed Donuts</li>
-            <li></li>
+            <li>1 cup maple sugar</li>
+            <li>&frac12; cup Diamond Crystal kosher salt</li>
+            <li>1 tablespoon peppercorns, cracked</li>
+            <li>2 teaspoons minced fresh thyme</li>
+            <li>&frac34; teaspoon pink salt</li>
+            <li>1 bay leaf, crumbled</li>
+            <li>1 (4-pound) pork belly, skin removed if necessary</li>
+            <li>Wood chips or chunks for smoking</li>
         </ul>
     <p><h2>Steps</h2></p>
         <ol>
-
+            <li>Combine sugar, salt, peppercorns, thyme, pink salt, and bay leaf in small bowl.</li>
+            <li>Place pork belly in 13 by 9-inch baking dish and rub all sides and edges with dry cure mixture.</li>
+            <li>Cover dish tightly with plastic wrap and refrigerate until pork feels firm yet still pliable, 7 to 10 days, flipping meat every other day.</li>
+            <li>Thoroughly rinse pork with cold water and pat dry with paper towels.</li>
+            <li>Depending on your grill/smoker, adjust wood and ventilation to smoke until pork registers 150&deg;, 2-4 hours usually.</li>
+            <li>Remove bacon from smoker and let cool completely before slicing.  Bacon can be wrapped tightly and refrigerated for up to 1 month.</li>
         </ol>
+
+    <p><h2>Serving notes</h2></p>
+        <p>Since the bacon is fully cooked at this point, it can be served cold; thinly sliced as part of a salad.  For
+        traditional breakfast bacon, slice to desired thickness and cook on wire rack at 400&deg; for 35 minutes; rotating and flipping &frac12; way through. </p>
+    <a href="../index.html">Home</a>
 </body>
 </html>
