--- a/recipes/kk_smash_burger.html
+++ b/recipes/kk_smash_burger.html
@@ -30,7 +30,7 @@
                 </ul>
         </ul>
     <p><h2>Steps</h2></p>
-    <p><strong>Notes:</strong>You can use 85&percnt; lean ground beef, but 90&percnt; lean will product a dry burger.
+    <p><strong>Notes:</strong>  You can use 85&percnt; lean ground beef, but 90&percnt; lean will produce a dry burger.
     Having an assistant waving a towel near the smoke detector will be very helpful during the cooking steps.  Pressing
     the patties strongly is required to generate the desired patty thinness and crust.  American cheese is recommended
     for correct meltiness.</p>
@@ -45,7 +45,7 @@
             <li>Use bottom of prepared saucepan to firmly smash each ball until 4 to 4&frac12; inches in diameter.  Place saucepan on plate next to cooktop.</li>
             <li>Sprinkle patties with &frac18; teaspoon salt and season with pepper.</li>
             <li>Cook until at least &frac34; of each patty is no longer pink on top, about 2 minutes (patties will stick to skillet).</li>
-            <li>Use thin metal spatula to loosen patties from skillet, flip and cook for 15 seconds transfer to warming rack.</li>
+            <li>Use thin metal spatula to loosen patties from skillet, flip and cook for 15 seconds, then transfer to warming rack.</li>
             <li>Gently scrape any browned bits from skillet, use tongs to wipe with reserved paper towel.  Return to heat.</li>
             <li>Repeat with two more balls, then cover each with one slice cheese.</li>
             <li>Repeat and cover each slice with additional meat patty.</li>
