Dropped "for two" in Dirty Martini.

--- a/recipes/dirty_martini.html
+++ b/recipes/dirty_martini.html
@@ -5,7 +5,7 @@
     <title>Dirty Martini</title>
 </head>
 <body>
-    <h1>Dirty Martini for two</h1>
+    <h1>Dirty Martini</h1>
     <img src="../images/dirty_martini.jpg" width="400">
     <p><h2>Ingredients</h2></p>
         <ul>
