Added a variety of CSS styling and bonus recipe

--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1>Odin Recipes</h1>
-<p><a href="recipes/kk_smash_burger.html">Krispy Kreme Smash Burger</a></p>
-<p><a href="recipes/dirty_martini.html">Dirty Martini</a></p>
-<p><a href="recipes/bacon.html">Bacon</a></p>
+<div style="text-align: center;">
+    <h1>Odin Recipes</h1>
+    <p><a href="recipes/kk_smash_burger.html">Krispy Kreme Smash Burger</a></p>
+    <p><a href="recipes/dirty_martini.html">Dirty Martini</a></p>
+    <p><a href="recipes/bacon.html">Bacon</a></p>
+    <p><a href="recipes/special_olives.html">Bonus Recipe</a></p>
+</div>
 </body>
 </html>
