--- a/recipes/dirty_martini.html
+++ b/recipes/dirty_martini.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Dirty Martini</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <h1>Dirty Martini</h1>
